rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__group_by__grain_keep_only_status_top_level.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/group_by.rs
assertion_line: 121
expression: result
---
orders__category | orders__amount_grain_keep_only_status
-----------------+--------------------------------------
books            | 2250.00                              
clothing         | 2250.00                              
electronics      | 2250.00
