rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__group_by__group_by_equals_query_dims.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/group_by.rs
expression: result
---
orders__status | orders__category | orders__amount_group_by_both
---------------+------------------+-----------------------------
cancelled      | books            | 100.00                      
cancelled      | clothing         | 50.00                       
cancelled      | electronics      | 50.00                       
completed      | books            | 600.00                      
completed      | clothing         | 300.00                      
completed      | electronics      | 500.00                      
pending        | books            | 180.00                      
pending        | clothing         | 370.00                      
pending        | electronics      | 100.00
