rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__group_by__group_by_override.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/group_by.rs
expression: result
---
orders__category | orders__amount_group_by_status
-----------------+-------------------------------
books            | 2250.00                       
clothing         | 2250.00                       
electronics      | 2250.00
