rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__group_by__group_by_time_dim_multiple_granularities.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/group_by.rs
expression: result
---
orders__created_at_month | orders__created_at_week | orders__amount_group_by_status_time
-------------------------+-------------------------+------------------------------------
2024-01-01 00:00:00      | 2024-01-01 00:00:00     | 500.00                             
2024-01-01 00:00:00      | 2024-01-08 00:00:00     | 500.00                             
2024-01-01 00:00:00      | 2024-01-15 00:00:00     | 500.00                             
2024-01-01 00:00:00      | 2024-01-22 00:00:00     | 500.00                             
2024-02-01 00:00:00      | 2024-01-29 00:00:00     | 750.00                             
2024-02-01 00:00:00      | 2024-02-05 00:00:00     | 750.00                             
2024-02-01 00:00:00      | 2024-02-12 00:00:00     | 750.00                             
2024-02-01 00:00:00      | 2024-02-19 00:00:00     | 750.00                             
2024-03-01 00:00:00      | 2024-02-26 00:00:00     | 1000.00                            
2024-03-01 00:00:00      | 2024-03-04 00:00:00     | 1000.00                            
2024-03-01 00:00:00      | 2024-03-11 00:00:00     | 1000.00                            
2024-03-01 00:00:00      | 2024-03-18 00:00:00     | 1000.00
